--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,35 @@ a {
   box-shadow: 5px 5px 5px 5px #EBEBEB;
   z-index: 1;
 }
+
+.slideLeftItem {
+  animation: slideLeft 1s;
+}
+
+.slideUpItem {
+  animation: slideUp 1s;
+}
+
+@keyframes slideLeft {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
